fixed active links on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,5 @@ ul {
 
 body {
   font-family: Roboto;
+  height: 100% !important;
 }
